--- a/package.json
+++ b/package.json
@@ -10,15 +10,23 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.0",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/material-bottom-tabs": "^6.1.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/stack": "^6.1.1",
     "react": "17.0.2",
     "react-native": "0.67.4",
+    "react-native-elements": "^3.0.0-alpha.1",
     "react-native-gesture-handler": "^2.3.2",
     "react-native-safe-area-context": "^4.2.2",
-    "react-native-screens": "^3.13.1"
+    "react-native-screens": "^3.13.1",
+    "react-native-toast-message": "^2.1.3",
+    "react-native-vector-icons": "^9.1.0",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@babel/core": "7.17.8",
